js262/test/language/module-code/parse-err-decl-pos-export-try-catch-finally.js


/*---
description: Statement cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

try { } catch (err) { } finally {
  export default null;
}
